WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20572
Window doesn't get Animation/Transition events unless document is listening
https://bugs.webkit.org/show_bug.cgi?id=20572
Summary
Window doesn't get Animation/Transition events unless document is listening
Dean Jackson
Reported
2008-08-29 19:21:53 PDT
We have code that intercepts event listener registration on the document level to make sure we don't fire unnecessary transition and animation events. However, if a listener is only on the window it means the event will never fire.
Attachments
makes sure Window registers event types
(2.63 KB, patch)
2008-12-04 16:22 PST
,
Dean Jackson
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-11-20 18:09:09 PST
Should the window even get animation events? Is there precedence?
Dean Jackson
Comment 2
2008-12-04 16:21:00 PST
I did a little research and it seems the window should get these events. However, this is the first time one of the "noisy" events makes sense to be added to the window (others like mutation events aren't turned on). The problem is that the document doesn't register the event type when adding an event listener to the window, the way event target does. It's an easy fix.
Dean Jackson
Comment 3
2008-12-04 16:22:07 PST
Created
attachment 25756
[details]
makes sure Window registers event types
Dave Hyatt
Comment 4
2008-12-05 09:53:04 PST
Comment on
attachment 25756
[details]
makes sure Window registers event types r=me
Dean Jackson
Comment 5
2008-12-05 11:01:35 PST
Committed
r39037
M WebCore/dom/Document.cpp M WebCore/ChangeLog M LayoutTests/ChangeLog M LayoutTests/transitions/transition-end-event-window.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug