2008-12-05  Dean Jackson  <dino@apple.com>

Reviewed by David Hyatt.

        WebCore:
        Make sure Window event listeners also tell the
        Document about the event type, so noisy events
        will be dispatched even if nothing in the document
        is listening.
        https://bugs.webkit.org/show_bug.cgi?id=20572

        * dom/Document.cpp:
        (WebCore::Document::addWindowEventListener):

        LayoutTests:
        No longer need to add a fake listener on a document
        node in order to get events passed up to Window.
        https://bugs.webkit.org/show_bug.cgi?id=20572

        * transitions/transition-end-event-window.html:


Canonical link: https://commits.webkit.org/31241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39037 268f45cc-cd09-0410-ab3c-d52691b4dbfc